# switchbot

./: Dockerfile  Readme.rst  pyproject.toml
src/switchbot/: __init__.py  routes.py
src/switchbot/handlers/: meter.py
src/switchbot/storage/: __init__.py  dummy.py  sqlite.py
src/switchbot/templates/: index.html
